--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,31 @@
+h4, h5 {
+    font-weight: 500;
+}
+
 .jumbotron {
     min-height: 100vh;
+}
+
+.text-gray {
+    color: $gray-500;
+}
+
+.text-small {
+    font-size: $font-size-sm;
+}
+
+.text-large {
+    font-size: $font-size-lg;
+}
+
+.spaced {
+    letter-spacing: 2px;
+}
+
+.bg-primary-gradient {
+    background-image: linear-gradient(106deg, #039ee0, #15425c);
+}
+
+.bg-secondary-gradient {
+    background-image: linear-gradient(111deg, #e7eeff, #def5ff);
 }
