Add footer and adjust layout

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,11 +1,11 @@
 <section class="mb-5">
     <div class="container">
-        <div class="row justify-content-center mb-4">
+        <div class="row justify-content-center mb-5">
             <div class="col text-center">
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
                 <h5 class="text-secondary spaced mb-5">ABOUT VNK CONSULTANTS</h5>
                 <h2 class="mb-5">At VNK Consulting Group, information technology is what we do</h2>
-                <p class="text-large font-weight-light">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology. We are an expert team of highly dedicated IT specialists, supported by strategic and talented technology partners, who are laser focused on best of practice software development, Cyber security and IT infrastructure.</p>
+                <p class="text-xlarge font-weight-light">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology. We are an expert team of highly dedicated IT specialists, supported by strategic and talented technology partners, who are laser focused on best of practice software development, Cyber security and IT infrastructure.</p>
             </div>
         </div>
         <div class="row justify-content-center">
