--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -1,4 +1,4 @@
-<section class="mb-5">
+<section class="customers">
     <h4 class="text-secondary text-center font-weight-normal">Some customers we’ve worked with</h4>
     <p class="text-center">Slider goes here</p>
 </section>
