--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="jumbotron jumbotron-fluid">
+<header class="jumbotron jumbotron-fluid bg-primary-gradient">
     {% include navigation.html %}
 
 </header>
