--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,4 +1,4 @@
-<section class="bg-secondary-gradient p-5">
+<section class="bg-secondary-gradient core-team">
     <div class="container">
         <div class="row mb-5">
             <div class="col">
