--- a/_includes/contact-cta.html
+++ b/_includes/contact-cta.html
@@ -1,8 +1,8 @@
-<section class="bg-primary-gradient text-center p-5">
+<section class="bg-primary-gradient text-center contact-cta">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <h3 class="text-white mb-4">Whether you need application development, network infrastructure or perhaps a security audit, contact us for a FREE consultation.</h3>
+                <h3 class="text-white mb-5">Whether you need application development, network infrastructure or perhaps a security audit, contact us for a FREE consultation.</h3>
                 <button class="btn btn-outline-light">Contact Us</button>
             </div>
         </div>
