--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,6 +4,7 @@ h4, h5 {
 
 .jumbotron {
     min-height: 100vh;
+    margin-bottom: 100px;
 }
 
 .text-gray {
@@ -18,8 +19,16 @@ h4, h5 {
     font-size: $font-size-lg;
 }
 
+.text-xlarge {
+    font-size: $font-size-xl;
+}
+
 .spaced {
     letter-spacing: 2px;
+}
+
+.line-height-large {
+    line-height: $line-height-lg;
 }
 
 .bg-primary-gradient {
@@ -28,4 +37,18 @@ h4, h5 {
 
 .bg-secondary-gradient {
     background-image: linear-gradient(111deg, #e7eeff, #def5ff);
+}
+
+.customers {
+    margin-bottom: 200px;
+}
+
+.core-team {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.contact-cta {
+    padding-top: 150px;
+    padding-bottom: 150px;
 }
