--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-3">
-                <img class="mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting" width="173">
+                <img class="mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting"
+                    width="173">
                 <p class="mb-1"><a class="text-primary" href="mailto:info@vnkconsult.com">info@vnkconsult.com</a></p>
                 <p><u><a class="text-primary text-large" href="tel:(416) 237-0009">(416) 237-0009</a></u></p>
             </div>
@@ -11,21 +12,23 @@
                 <ul class="nav flex-column">
                     {% assign services = site.data.navigation.main | where: "name", "Services" | first %}
                     {% for item in services.sub_navigation %}
-                        <li class="nav-item">
-                            <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}" href="{{ item.link }}">{{ item.name }}</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
+                            href="{{ item.link }}">{{ item.name }}</a>
+                    </li>
                     {% endfor %}
-                  </ul>
+                </ul>
             </div>
             <div class="col-3">
                 <h5 class="mb-4">About us</h5>
                 <ul class="nav flex-column">
                     {% for item in site.data.navigation.main %}
-                        <li class="nav-item">
-                            <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}" href="{{ item.link }}">{{ item.name }}</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
+                            href="{{ item.link }}">{{ item.name }}</a>
+                    </li>
                     {% endfor %}
-                  </ul>
+                </ul>
             </div>
             <div class="col-3">
                 <h5 class="mb-4">Our Address</h5>
@@ -44,3 +47,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type="text/javascript" src="{{ 'assets/js/app.js' | relative_url }}"></script>
