--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,17 +7,17 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img class="mb-5" src="{{ 'assets/images/icons/consult.svg' | relative_url }}" alt="We Consult">
+                <img class="mb-5" src="{{ 'assets/images/icons/consult.svg' | relative_url }}" alt="We Consult" height="228">
                 <h4 class="mb-4">We Consult</h4>
                 <p class="text-gray">Our focus is to provide robust and secure solutions to your IT challenges and assuring your business objectives are not only met, but surpassed.</p>
             </div>
             <div class="col-4">
-                <img class="mb-5" src="{{ 'assets/images/icons/develop.svg' | relative_url }}" alt="We Develop">
+                <img class="mb-5" src="{{ 'assets/images/icons/develop.svg' | relative_url }}" alt="We Develop" height="228">
                 <h4 class="mb-4">We Develop</h4>
                 <p class="text-gray">Over 60% of web traffic now comes from mobile devices. We build mobile sites and apps to engage these users to better interact with your brand.</p>
             </div>
             <div class="col-4">
-                <img class="mb-5" src="{{ 'assets/images/icons/security.svg' | relative_url }}" alt="We Secure">
+                <img class="mb-5" src="{{ 'assets/images/icons/security.svg' | relative_url }}" alt="We Secure" height="228">
                 <h4 class="mb-4">We Secure</h4>
                 <p class="text-gray">By assessing your network, applications and security policies, we’ll uncover areas for improvement and provide solid solutions to harden your overall security.</p>
             </div>
