--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -52,3 +52,8 @@ h4, h5 {
     padding-top: 150px;
     padding-bottom: 150px;
 }
+
+.footer-menu {
+    padding-top: 130px;
+    padding-bottom: 80px;
+}
