--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,47 @@
-<footer class="p-5">
+<footer>
+    <div class="footer-menu">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <img class="mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting"
+                        width="173">
+                    <p class="mb-1"><a class="text-primary" href="mailto:info@vnkconsult.com">info@vnkconsult.com</a></p>
+                    <p><u><a class="text-primary text-large" href="tel:(416) 237-0009">(416) 237-0009</a></u></p>
+                </div>
+                <div class="col-3">
+                    <h5 class="mb-4">Services</h5>
+                    <ul class="nav flex-column">
+                        {% assign services = site.data.navigation.main | where: "name", "Services" | first %}
+                        {% for item in services.sub_navigation %}
+                        <li class="nav-item">
+                            <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
+                                href="{{ item.link }}">{{ item.name }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h5 class="mb-4">About us</h5>
+                    <ul class="nav flex-column">
+                        {% for item in site.data.navigation.main %}
+                        <li class="nav-item">
+                            <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
+                                href="{{ item.link }}">{{ item.name }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h5 class="mb-4">Our Address</h5>
+                    <p>1 Yonge St. Suite 1801<br>Toronto, ON M5E1W7</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
-            <div class="col-3">
-                <img class="mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting"
-                    width="173">
-                <p class="mb-1"><a class="text-primary" href="mailto:info@vnkconsult.com">info@vnkconsult.com</a></p>
-                <p><u><a class="text-primary text-large" href="tel:(416) 237-0009">(416) 237-0009</a></u></p>
-            </div>
-            <div class="col-3">
-                <h5 class="mb-4">Services</h5>
-                <ul class="nav flex-column">
-                    {% assign services = site.data.navigation.main | where: "name", "Services" | first %}
-                    {% for item in services.sub_navigation %}
-                    <li class="nav-item">
-                        <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
-                            href="{{ item.link }}">{{ item.name }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="col-3">
-                <h5 class="mb-4">About us</h5>
-                <ul class="nav flex-column">
-                    {% for item in site.data.navigation.main %}
-                    <li class="nav-item">
-                        <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
-                            href="{{ item.link }}">{{ item.name }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="col-3">
-                <h5 class="mb-4">Our Address</h5>
-                <p>1 Yonge St. Suite 1801<br>Toronto, ON M5E1W7</p>
+            <div class="col">
+                <p class="border-top pt-4 pb-5 mb-0">&copy; Copyright 2020 - VNK Consulting Group - All Rights Reserved</p>
             </div>
         </div>
     </div>
