Update header and navbar

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-dark mb-5">
     <div class="container">
         <a class="navbar-brand" href="#">
             <img src="{{ 'assets/images/logos/vnk-logo-white.png' | relative_url }}" alt="VNK Consulting" loading="lazy">
@@ -9,24 +9,26 @@
         </button>
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav align-items-center ml-auto">
                 {% for item in site.data.navigation.main %}
-                <li class="nav-item {% if page.url == item.link %}active{% endif %}">
-                    <a class="nav-link" href="{{ item.link }}">{{ item.name }} {% if page.url == item.link %}<span class="sr-only">(current)</span>{% endif %}</a>
-                </li>
+                    {% if item.sub_navigation %}
+                        <li class="nav-item dropdown {% if page.url == item.link %}active{% endif %}">
+                            <a class="{% if item.classes %}{{ item.classes }}{% else %}nav-link{% endif %} dropdown-toggle" href="{{ item.link }}" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                {{ item.name }} {% if page.url == item.link %}<span class="sr-only">(current)</span>{% endif %}
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                {% for sub_item in item.sub_navigation %}
+                                    <a class="dropdown-item" href="{{ sub_item.link }}">{{ sub_item.name }}</a>
+                                {% endfor %}
+                            </div>
+                        </li>
+                    {% else %}
+                        <li class="nav-item {% if page.url == item.link %}active{% endif %}">
+                            <a class="{% if item.classes %}{{ item.classes }}{% else %}nav-link{% endif %}" href="{{ item.link }}">{{ item.name }} {% if page.url == item.link %}<span class="sr-only">(current)</span>{% endif %}</a>
+                        </li>
+                    {% endif %}
                 {% endfor %}
-                <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li> -->
             </ul>
         </div>
     </div>
