--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,19 @@
-<header class="jumbotron jumbotron-fluid bg-primary-gradient">
+<header class="jumbotron jumbotron-fluid bg-primary-gradient overflow-hidden">
     {% include navigation.html %}
 
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-lg-6">
+                <h1 class="text-white mb-4">Trusted IT Support Experts</h1>
+                <p class="text-xlarge text-white line-height-small mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
+                <div class="d-flex">
+                    <button class="btn btn-outline-white btn-wide mr-4">Our Services</button>
+                    <button class="btn btn-outline-white btn-wide">Contact Us</button>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <img class="header-image" src="{{ 'assets/images/header/header.jpg' | relative_url }}" alt="Open browser tab">
+            </div>
+        </div>
+    </div>
 </header>
