--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,10 +1,5 @@
-h4, h5 {
+h1, h4, h5 {
     font-weight: 500;
-}
-
-.jumbotron {
-    min-height: 100vh;
-    margin-bottom: 100px;
 }
 
 .text-gray {
@@ -27,6 +22,10 @@ h4, h5 {
     letter-spacing: 2px;
 }
 
+.line-height-small {
+    line-height: $line-height-sm;
+}
+
 .line-height-large {
     line-height: $line-height-lg;
 }
@@ -37,6 +36,10 @@ h4, h5 {
 
 .bg-secondary-gradient {
     background-image: linear-gradient(111deg, #e7eeff, #def5ff);
+}
+
+.services {
+    margin-bottom: 84px;
 }
 
 .customers {
