--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,6 +56,12 @@ h1, h4, h5 {
     padding-bottom: 150px;
 }
 
+.other-areas {
+    background-image: linear-gradient(to right, #e6eeff, #def4fe);
+    padding-top: 90px;
+    padding-bottom: 100px;
+}
+
 .footer-menu {
     padding-top: 130px;
     padding-bottom: 80px;
