--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark mb-5">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{ '/' | relative_url }}">
             <img src="{{ 'assets/images/logos/vnk-logo-white.png' | relative_url }}" alt="VNK Consulting" loading="lazy">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -13,7 +13,7 @@
                 {% for item in site.data.navigation.main %}
                     {% if item.sub_navigation %}
                         <li class="nav-item dropdown {% if page.url == item.link %}active{% endif %}">
-                            <a class="{% if item.classes %}{{ item.classes }}{% else %}nav-link{% endif %} dropdown-toggle" href="{{ item.link }}" id="navbarDropdown" role="button" data-toggle="dropdown"
+                            <a class="{% if item.classes %}{{ item.classes }}{% else %}nav-link{% endif %} dropdown-toggle" href="{{ item.link | relative_url }}" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 {{ item.name }} {% if page.url == item.link %}<span class="sr-only">(current)</span>{% endif %}
                             </a>
@@ -25,7 +25,7 @@
                         </li>
                     {% else %}
                         <li class="nav-item {% if page.url == item.link %}active{% endif %}">
-                            <a class="{% if item.classes %}{{ item.classes }}{% else %}nav-link{% endif %}" href="{{ item.link }}">{{ item.name }} {% if page.url == item.link %}<span class="sr-only">(current)</span>{% endif %}</a>
+                            <a class="{% if item.classes %}{{ item.classes }}{% else %}nav-link{% endif %}" href="{{ item.link | relative_url }}">{{ item.name }} {% if page.url == item.link %}<span class="sr-only">(current)</span>{% endif %}</a>
                         </li>
                     {% endif %}
                 {% endfor %}
