--- a/_includes/home/about-home.html
+++ b/_includes/home/about-home.html
@@ -11,11 +11,11 @@
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <h4 class="mb-5">About Us</h4>
-                <p>At VNK Consulting Group, information technology is what we do. Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology. We are an expert team of highly dedicated IT specialists, supported by strategic and talented technology partners, who are laser focused on best of practice software development, Cyber security and IT infrastructure.</p>
+                <p class="line-height-large">At VNK Consulting Group, information technology is what we do. Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology. We are an expert team of highly dedicated IT specialists, supported by strategic and talented technology partners, who are laser focused on best of practice software development, Cyber security and IT infrastructure.</p>
             </div>
             <div class="col-lg-6">
                 <h4 class="mb-5">Our History</h4>
-                <p>Dynamic and dedicated IT entrepreneur, Kobhi founded VNK Consulting Group in 2010 to provide IT consulting services and solutions to his clients. VNK Consulting Group delivers SOC 2 Type 2 certified security services supported by state-of-the-art, PCI compliant, data centers and Network Operations Center (NOC), operated 24/7/365 by certified professionals. This expertise is coupled with leadership positions across a wide range of functions including consulting, professional services & incident response.</p>
+                <p class="line-height-large">Dynamic and dedicated IT entrepreneur, Kobhi founded VNK Consulting Group in 2010 to provide IT consulting services and solutions to his clients. VNK Consulting Group delivers SOC 2 Type 2 certified security services supported by state-of-the-art, PCI compliant, data centers and Network Operations Center (NOC), operated 24/7/365 by certified professionals. This expertise is coupled with leadership positions across a wide range of functions including consulting, professional services & incident response.</p>
             </div>
         </div>
     </div>
