--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -1,11 +1,11 @@
-<header class="jumbotron jumbotron-fluid bg-primary-gradient overflow-hidden">
-    {% include navigation.html %}
+<header class="header-home jumbotron jumbotron-fluid bg-primary-gradient overflow-hidden">
+    {% include common/navigation.html %}
 
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-lg-6">
                 <h1 class="text-white mb-4">Trusted IT Support Experts</h1>
-                <p class="text-xlarge text-white line-height-small mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
+                <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
                 <div class="d-flex">
                     <button class="btn btn-outline-white btn-wide mr-4">Our Services</button>
                     <button class="btn btn-outline-white btn-wide">Contact Us</button>
