--- a/_includes/services/about-services.html
+++ b/_includes/services/about-services.html
@@ -1,4 +1,4 @@
-<section class="mb-5">
+<section class="about-services">
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col text-center">
