Adjust button height

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -50,6 +50,8 @@ $headings-font-weight: 400;
 $headings-line-height: 1.2;
 $headings-color: $primary;
 
+$input-btn-padding-y: 0.657125rem;
+
 $navbar-nav-link-padding-x: 1rem;
 $navbar-dark-color: #fff;
 $navbar-dark-hover-color: #fff;
