Add responsive styles

--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -3,7 +3,7 @@
 
     <div class="container">
         <div class="row align-items-center justify-content-between">
-            <div class="col-lg-6">
+            <div class="col-md-6 mb-5 mb-md-0">
                 <h1 class="text-white mb-4">Trusted IT Support Experts</h1>
                 <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
                 <div class="d-flex">
@@ -11,7 +11,7 @@
                     <button class="btn btn-outline-white btn-wide">Contact Us</button>
                 </div>
             </div>
-            <div class="col-lg-5">
+            <div class="col-md-5">
                 <img class="header-image" src="{{ 'assets/images/header/header.jpg' | relative_url }}" alt="Open browser tab">
             </div>
         </div>
