--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -2,13 +2,13 @@
     <div class="footer-menu">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4 mb-md-0">
                     <img class="mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting"
                         width="173">
                     <p class="mb-3"><a class="text-primary" href="mailto:info@vnkconsult.com">info@vnkconsult.com</a></p>
                     <p><u><a class="text-primary text-large" href="tel:(416) 237-0009">(416) 237-0009</a></u></p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4 mb-md-0">
                     <h5 class="mb-4">Services</h5>
                     <ul class="nav flex-column">
                         {% assign services = site.data.navigation.main | where: "name", "Services" | first %}
@@ -20,7 +20,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 mb-4 mb-md-0">
                     <h5 class="mb-4">About us</h5>
                     <ul class="nav flex-column">
                         {% for item in site.data.navigation.main %}
