--- a/_includes/services/about-services.html
+++ b/_includes/services/about-services.html
@@ -1,7 +1,7 @@
 <section class="about-services">
     <div class="container">
         <div class="row justify-content-center mb-5">
-            <div class="col text-center">
+            <div class="col-md-10 text-center">
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
                 <h5 class="text-info spaced mb-5">VNK CONSULTANTS SERVICES</h5>
                 <h2 class="mb-5">Srategy Implementation and Support</h2>
