--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -15,7 +15,7 @@
                         {% for item in services.sub_navigation %}
                         <li class="nav-item">
                             <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
-                                href="{{ item.link }}">{{ item.name }}</a>
+                                href="{{ item.link | relative_url }}">{{ item.name }}</a>
                         </li>
                         {% endfor %}
                     </ul>
@@ -26,7 +26,7 @@
                         {% for item in site.data.navigation.main %}
                         <li class="nav-item">
                             <a class="nav-link px-0 {% if page.url == item.link %}active{% endif %}"
-                                href="{{ item.link }}">{{ item.name }}</a>
+                                href="{{ item.link | relative_url }}">{{ item.name }}</a>
                         </li>
                         {% endfor %}
                     </ul>
