--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -7,7 +7,9 @@
                 <h1 class="text-white mb-4">Trusted IT Support Experts</h1>
                 <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
                 <div class="d-flex">
-                    <button class="btn btn-outline-white btn-wide mr-4">Our Services</button>
+                    <a href="services">
+                        <button class="btn btn-outline-white btn-wide mr-4">Our Services</button>
+                    </a>
                     <button class="btn btn-outline-white btn-wide">Contact Us</button>
                 </div>
             </div>
