Add background images

--- a/_includes/common/contact-cta.html
+++ b/_includes/common/contact-cta.html
@@ -1,4 +1,4 @@
-<section class="bg-primary-gradient text-center contact-cta">
+<section class="text-center contact-cta">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
