--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -1,4 +1,4 @@
-<header class="header-home jumbotron jumbotron-fluid bg-primary-gradient overflow-hidden">
+<header class="header-home jumbotron jumbotron-fluid overflow-hidden">
     {% include common/navigation.html %}
 
     <div class="container">
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="col-md-5">
-                <img class="header-image" src="{{ 'assets/images/header/header.jpg' | relative_url }}" alt="Open browser tab">
+                <img class="header-image" src="{{ 'assets/images/header/header-browser.svg' | relative_url }}" alt="Open browser tab">
             </div>
         </div>
     </div>
