--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,7 +1,7 @@
 .header-home {
     min-height: 100vh;
     margin-bottom: 100px;
-    background-image: url("/assets/images/backgrounds/home_banner.svg");
+    background-image: url("../images/backgrounds/home_banner.svg");
     background-size: cover;
 
     .header-image {
