--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -62,7 +62,7 @@ h1, h4, h5 {
 .contact-cta {
     padding-top: 150px;
     padding-bottom: 150px;
-    background-image: url("/assets/images/backgrounds/blue_banner_bg.svg");
+    background-image: url("../images/backgrounds/blue_banner_bg.svg");
     background-size: cover;
 }
 
