--- a/_includes/common/team.html
+++ b/_includes/common/team.html
@@ -1,4 +1,4 @@
-<section class="bg-secondary-gradient core-team">
+<section class="core-team {{ include.class }}">
     <div class="container">
         <div class="row mb-5">
             <div class="col">
