--- a/_includes/common/header-page.html
+++ b/_includes/common/header-page.html
@@ -5,8 +5,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10 text-center">
-                <h1 class="text-white mb-4">We Offer Free Consultation</h1>
-                <p class="text-xlarge text-white">Got a problem that needs solving right now? Need help assessing your infrastructure or perhaps need to discuss data security?</p>
+                <h1 class="text-white mb-4">{{ page.header_title }}</h1>
+                <p class="text-xlarge text-white">{{ page.header_text }}</p>
             </div>
         </div>
     </div>
