--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -42,14 +42,14 @@ h1, h4, h5 {
     margin-bottom: 84px;
 }
 
-.customers {
+.customers-home {
     margin-bottom: 200px;
 
 }
 
 @include media-breakpoint-down(md) {
 
-    .customers {
+    .customers-home {
         margin-bottom: 80px; 
     }
 }
@@ -112,6 +112,23 @@ h1, h4, h5 {
     background-image: linear-gradient(to right, #e6eeff, #def4fe);
     padding-top: 90px;
     padding-bottom: 100px;
+}
+
+.contact-cta-about {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.about-bg-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.about-image {
+    z-index: 1;
+    position: relative;
 }
 
 .footer-menu {
