--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,6 +3,9 @@
 @import "custom";
 @import "bootstrap/bootstrap";
 @import "fonts";
+@import "about";
 @import "buttons";
 @import "header";
+@import "home";
 @import "main";
+@import "services";
