--- a/_includes/common/header-page.html
+++ b/_includes/common/header-page.html
@@ -1,4 +1,4 @@
-<header class="header-page jumbotron jumbotron-fluid overflow-hidden"
+<header class="header-page jumbotron jumbotron-fluid overflow-hidden {{ include.class }}"
     style="background-image: url({{ 'assets/images/header/' | relative_url | append: page.header_image }})">
     {% include common/navigation.html %}
 
