--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -38,7 +38,7 @@ h1, h4, h5 {
     background-image: linear-gradient(111deg, #e7eeff, #def5ff);
 }
 
-.core-team {
+.team {
     padding-top: 100px;
     padding-bottom: 100px;
 }
