Add contact page

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -51,6 +51,11 @@ $headings-line-height: 1.2;
 $headings-color: $primary;
 
 $input-btn-padding-y: 0.657125rem;
+$input-padding-y: 1rem;
+$input-padding-x: 1rem;
+$input-border-color: #ebebeb;
+$input-border-radius: 0;
+$input-placeholder-color: #989ca2;
 
 $navbar-nav-link-padding-x: 1rem;
 $navbar-dark-color: #fff;
