Fix contact form

--- a/_includes/contact/contact-form.html
+++ b/_includes/contact/contact-form.html
@@ -5,20 +5,20 @@
                 <form id="contact">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="firstName" placeholder="First Name*" required>
+                            <input type="text" class="form-control" name="firstName" placeholder="First Name*" required>
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="secondName" placeholder="Second Name*" required>
+                            <input type="text" class="form-control" name="secondName" placeholder="Second Name*" required>
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control" id="email" placeholder="Email Address*" required>
+                        <input type="email" class="form-control" name="email" placeholder="Email Address*" required>
                     </div>
                     <div class="form-group">
-                        <input type="tel" class="form-control" id="phone" placeholder="Phone Number*" required>
+                        <input type="tel" class="form-control" name="phone" placeholder="Phone Number*" required>
                     </div>
                     <div class="form-group">
-                        <textarea type="email" class="form-control" id="message" placeholder="Enquiry*" rows="5" required></textarea>
+                        <textarea type="email" class="form-control" name="message" placeholder="Enquiry*" rows="5" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary btn-wide">Send Message</button>
                 </form>
