--- a/_includes/about/contact-cta-about.html
+++ b/_includes/about/contact-cta-about.html
@@ -4,7 +4,9 @@
             <div class="col-lg-8">
                 <h5 class="text-info spaced mb-4">CONTACT US TODAY</h5>
                 <h2 class="mb-4">Want to find out how we can help? Contact us today</h2>
-                <button class="btn btn-outline-primary btn-wide">Contact Us</button>
+                <a href="{{ '/contact' | relative_url }}">
+                    <button class="btn btn-outline-primary btn-wide">Contact Us</button>
+                </a>
             </div>
         </div>
     </div>
