--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -59,3 +59,6 @@
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script type="text/javascript" src="{{ 'assets/js/carousel.js' | relative_url }}"></script>
 <script type="text/javascript" src="{{ 'assets/js/contact.js' | relative_url }}"></script>
+{% if page.map %}
+    <script type="text/javascript" src="{{ 'assets/js/map.js' | relative_url }}"></script>
+{% endif %}
