--- a/_includes/common/contact-cta.html
+++ b/_includes/common/contact-cta.html
@@ -3,7 +3,9 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <h3 class="text-white mb-5">Whether you need application development, network infrastructure or perhaps a security audit, contact us for a FREE consultation.</h3>
-                <button class="btn btn-outline-white btn-wide">Contact Us</button>
+                <a href="{{ '/contact' | relative_url }}">
+                    <button class="btn btn-outline-white btn-wide">Contact Us</button>
+                </a>
             </div>
         </div>
     </div>
