--- a/_includes/contact/contact-form.html
+++ b/_includes/contact/contact-form.html
@@ -1,7 +1,7 @@
 <section class="contact-form">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mb-5 mb-md-0">
                 <form id="contact">
                     <div class="form-row">
                         <div class="form-group col-md-6">
