--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -10,4 +10,9 @@
         align-items: center;
         justify-content: center;
     }
+
+    .profile-placeholder {
+        height: 86px;
+        width: 87px;
+    }
 }
