Add background shapes to home page

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -1,3 +1,11 @@
+.bg-shapes-home {
+    position: absolute;
+    left: 50%;
+    top: -300px;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+
 .services {
     margin-bottom: 84px;
 }
