--- a/_includes/home/about-home.html
+++ b/_includes/home/about-home.html
@@ -2,6 +2,7 @@
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center">
+                <img class="bg-shapes-home" src="{{ 'assets/images/icons/dashed_line_plus_shapes.svg' | relative_url }}" alt="Background shapes">
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
                 <h5 class="text-info spaced mb-5">ABOUT VNK CONSULTANTS</h5>
                 <h2 class="mb-5">At VNK Consulting Group, information technology is what we do</h2>
