--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -1,4 +1,4 @@
-<header class="header-home jumbotron jumbotron-fluid overflow-hidden">
+<header class="header-home jumbotron jumbotron-fluid">
     {% include common/navigation.html %}
 
     <div class="container">
