Add home page animations

--- a/_includes/common/team-list.html
+++ b/_includes/common/team-list.html
@@ -1,13 +1,13 @@
 <section class="team {{ include.class }}">
     <div class="container">
         <div class="row mb-5">
-            <div class="col">
+            <div class="col" data-aos="fade-up">
                 <h2 class="text-center">The Core Team</h2>
             </div>
         </div>
         {% for member in site.data.team limit:4 %}
             {% cycle 'row-start': '<div class="row justify-content-center">', '' %}
-                <div class="col-md-5 mb-4">
+                <div class="col-md-5 mb-4" data-aos="fade-left">
                     <div class="bg-white rounded border shadow d-flex align-items-center p-4">
                         <img class="rounded-circle mr-5" src="{{ 'assets/images/team/' | relative_url | append: member.image }}" alt="{{ member.name }}" width="87">
                         <div>
