--- a/_includes/common/contact-cta.html
+++ b/_includes/common/contact-cta.html
@@ -1,7 +1,7 @@
 <section class="text-center contact-cta">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-8">
+            <div class="col-lg-8" data-aos="fade-up">
                 <h3 class="text-white mb-5">Whether you need application development, network infrastructure or perhaps a security audit, contact us for a FREE consultation.</h3>
                 <a href="{{ '/contact' | relative_url }}">
                     <button class="btn btn-outline-white btn-wide">Contact Us</button>
