--- a/_includes/common/customers.html
+++ b/_includes/common/customers.html
@@ -1,4 +1,4 @@
-<section class="{% if include.class %}{{ include.class }}{% else %}mb-3{% endif %}">
+<section class="{% if include.class %}{{ include.class }}{% else %}mb-3{% endif %}" data-aos="fade-left">
     <h4 class="text-info text-center font-weight-normal mb-4">Some customers we’ve worked with</h4>
     <div class="customers-carousel">
         {% for item in site.data.carousel.images %}
