--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -2,13 +2,13 @@
     <div class="footer-menu">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 mb-4 mb-md-0">
+                <div class="col-md-3 mb-4 mb-md-0" data-aos="fade-up">
                     <img class="mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting"
                         width="173">
                     <p class="mb-3"><a class="text-primary" href="mailto:info@vnkconsult.com">info@vnkconsult.com</a></p>
                     <p><u><a class="text-primary text-large" href="tel:(416) 237-0009">(416) 237-0009</a></u></p>
                 </div>
-                <div class="col-md-3 mb-4 mb-md-0">
+                <div class="col-md-3 mb-4 mb-md-0" data-aos="fade-up" data-aos-delay="100">
                     <h5 class="mb-4">Services</h5>
                     <ul class="nav flex-column">
                         {% assign services = site.data.navigation.main | where: "name", "Services" | first %}
@@ -20,7 +20,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col-md-3 mb-4 mb-md-0">
+                <div class="col-md-3 mb-4 mb-md-0" data-aos="fade-up" data-aos-delay="200">
                     <h5 class="mb-4">About us</h5>
                     <ul class="nav flex-column">
                         {% for item in site.data.navigation.main %}
@@ -31,7 +31,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" data-aos="fade-up" data-aos-delay="300">
                     <h5 class="mb-4">Our Address</h5>
                     <p>1 Yonge St. Suite 1801<br>Toronto, ON M5E1W7</p>
                 </div>
@@ -56,7 +56,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type="text/javascript" src="{{ 'assets/js/animate.js' | relative_url }}"></script>
 <script type="text/javascript" src="{{ 'assets/js/carousel.js' | relative_url }}"></script>
 <script type="text/javascript" src="{{ 'assets/js/contact.js' | relative_url }}"></script>
 {% if page.map %}
