--- a/_includes/home/developing.html
+++ b/_includes/home/developing.html
@@ -1,22 +1,22 @@
 <section class="services">
     <div class="container text-center">
         <div class="row justify-content-center mb-5">
-            <div class="col-lg-7">
+            <div class="col-lg-7" data-aos="fade-up">
                 <h2>Developing and securing your applications</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4" data-aos="fade-up">
                 <img class="mb-5" src="{{ 'assets/images/icons/consult.svg' | relative_url }}" alt="We Consult" height="228">
                 <h4 class="mb-4">We Consult</h4>
                 <p class="text-gray">Our focus is to provide robust and secure solutions to your IT challenges and assuring your business objectives are not only met, but surpassed.</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                 <img class="mb-5" src="{{ 'assets/images/icons/develop.svg' | relative_url }}" alt="We Develop" height="228">
                 <h4 class="mb-4">We Develop</h4>
                 <p class="text-gray">Over 60% of web traffic now comes from mobile devices. We build mobile sites and apps to engage these users to better interact with your brand.</p>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
                 <img class="mb-5" src="{{ 'assets/images/icons/security.svg' | relative_url }}" alt="We Secure" height="228">
                 <h4 class="mb-4">We Secure</h4>
                 <p class="text-gray">By assessing your network, applications and security policies, we’ll uncover areas for improvement and provide solid solutions to harden your overall security.</p>
