--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -3,7 +3,7 @@
 
     <div class="container">
         <div class="row align-items-center justify-content-between">
-            <div class="col-md-6 mb-5 mb-md-0">
+            <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-right">
                 <h1 class="text-white mb-4">Trusted IT Support Experts</h1>
                 <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
                 <div class="d-flex">
@@ -15,7 +15,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5" data-aos="flip-right">
                 <img class="header-image" src="{{ 'assets/images/header/header_browser.svg' | relative_url }}" alt="Open browser tab">
             </div>
         </div>
